--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "url": "https://github.com/risecorejs/middleware/issues"
   },
   "homepage": "https://github.com/risecorejs/middleware#readme",
-  "devDependencies": {
-    "prettier": "^2.3.2"
-  },
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "express": "^4.18.1",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.184",
+    "@types/node": "^18.7.11",
+    "prettier": "^2.3.2",
+    "typescript": "^4.7.4"
   }
 }
